--- a/pettingzoo/sweep.yaml
+++ b/pettingzoo/sweep.yaml
@@ -1,4 +1,9 @@
-program: "train.py --config=configs/ma_msh.json"
+program: "main_split.py"
+command:
+  - ${env}
+  - python
+  - ${program}
+  - "--config=configs/ma_msh.json"
 method: bayes
 metric:
   name: eval_mean_reward
@@ -6,7 +11,7 @@ metric:
 parameters:
   gamma:
     distribution: uniform
-    min: 0.98
+    min: 0.95
     max: 1.0
   update_timestep:
     values: [40, 50, 60]
