--- a/pettingzoo/sweep.yaml
+++ b/pettingzoo/sweep.yaml
@@ -1,34 +1,12 @@
 command: ["python", "main_split.py", "--config=configs/ma_msh.json"]
-method: bayes
+method: grid
 metric:
-  name: eval_mean_reward
-  goal: maximize
+ name: eval_mean_reward
+ goal: maximize
 parameters:
-  gamma:
-    distribution: uniform
-    min: 0.95
-    max: 1.0
-  update_timestep:
-    values: [40, 50, 60]
-  train_epochs:
-    values: [5, 10, 15]
-  eps_clip:
-    distribution: uniform
-    min: 0.05
-    max: 0.15
-  lr_actor:
-    distribution: log_uniform_values
-    min: 0.0005
-    max: 0.005
-  lr_critic:
-    distribution: log_uniform_values
-    min: 0.0005
-    max: 0.005
-  vf_coef:
-    distribution: uniform
-    min: 0.2
-    max: 0.4
-  entropy_coef:
-    distribution: uniform
-    min: 0.005
-    max: 0.02
+ algo:
+   values: [“IPPO”, “SIPPO”, “MAPPO”, “SMAPPO”, “ACSPPO”, “SACSPPO”]
+ seed:
+   values: [100, 101, 102, 103, 104]
+ shielded_ratio:
+   values: [1/6,2/5,3/5,4/5,5/5]
