--- a/pettingzoo/sweep.yaml
+++ b/pettingzoo/sweep.yaml
@@ -9,4 +9,4 @@ parameters:
  seed:
    values: [100, 101, 102, 103, 104]
  shielded_ratio:
-   values: [1/6,2/5,3/5,4/5,5/5]
+   values: [0.2,0.4,0.6,0.8,1.0]
